Fixed alignment in home and about us text contents

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -87,6 +87,10 @@ article {
     justify-content: flex-start;
     align-items: flex-start;
 
+    h3 {
+      text-align: right;
+    }
+
     section:first-of-type {
       margin-left: 5%;
     }
